window: Fix key event state comparisons

GDK can set random bits in the state to indicate internal stuff. We have
to use GDK_MODIFIER_MASK to mask out its reserved values before trying
to look at the state.

https://bugzilla.gnome.org/show_bug.cgi?id=772437